--- a/admin/app/views/spree/admin/coupon_codes/index.html.erb
+++ b/admin/app/views/spree/admin/coupon_codes/index.html.erb
@@ -8,8 +8,8 @@
           <%= render 'spree/admin/shared/filters_search_bar', param: :code_eq %>
 
           <div class="d-flex align-items-center justify-content-between">
-            <div class="dropdown h-100">
-              <button class="btn btn-light h-100 dropdown-toggle" type="button" data-toggle="dropdown" data-display="static" data-flip="false" aria-expanded="false">
+            <div class="dropdown">
+              <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" data-display="static" data-flip="false" aria-expanded="false">
                 <span class="text-muted font-weight-normal mr-1">
                   <%= Spree.t(:show) %>
                 </span>
