--- a/admin/app/views/spree/admin/invitations/new.html.erb
+++ b/admin/app/views/spree/admin/invitations/new.html.erb
@@ -8,7 +8,7 @@
         <%= render 'spree/admin/shared/error_messages', target: @invitation %>
         <div class="form-group">
           <%= f.label :email, Spree.t(:email) %>
-          <%= f.email_field :email, class: 'form-control', required: :required, data: { 'enable-button-target': 'input' }, placeholder: 'eg. steve@apple.com' %>
+          <%= f.email_field :email, class: 'form-control', required: :required, data: { 'enable-button-target': 'input' }, placeholder: 'eg. steve@apple.com', autofocus: true %>
         </div>
         <% if @roles.any? %>
           <div class="form-group">
