--- a/admin/app/views/spree/admin/return_authorizations/_filters.html.erb
+++ b/admin/app/views/spree/admin/return_authorizations/_filters.html.erb
@@ -2,9 +2,9 @@
   <div class="d-flex flex-column flex-lg-row gap-2">
     <%= render "spree/admin/shared/filters_search_bar", param: :number_cont %>
 
-    <div class="dropdown h-100 mr-2">
+    <div class="dropdown">
       <button
-        class="btn btn-light h-100 dropdown-toggle"
+        class="btn btn-light dropdown-toggle"
         type="button"
         data-toggle="dropdown"
         aria-expanded="false"
