--- a/admin/app/views/spree/admin/users/_user.html.erb
+++ b/admin/app/views/spree/admin/users/_user.html.erb
@@ -1,17 +1,18 @@
-<tr id="<%= spree_dom_id user %>">
+<tr id="<%= spree_dom_id user %>" data-controller="row-link">
   <td class="pr-0 w-5">
     <%= bulk_operations_checkbox(user) %>
   </td>
-  <td class='user_name w-50 no-wrap py-0 pl-1 pr-0'>
+  <td class='w-50 no-wrap py-0 pl-1 pr-0'>
     <%= render 'spree/admin/shared/user', user: user %>
   </td>
-  <td class="no-wrap">
+  <td class="cursor-pointer" data-action="click->row-link#openLink">
     <%= active_badge(user.accepts_email_marketing?) %>
   </td>
-  <td class="w-25 no-wrap">
+  <td class="w-25 cursor-pointer" data-action="click->row-link#openLink">
     <%= customer_location_flag(user) %>
     <%= customer_location(user) %>
   </td>
-  <td class='user_num_orders w-10 no-wrap'><%= user.completed_orders_for_store(current_store).count %></td>
-  <td class='user_amount_spent w-10 no-wrap'><%= user.display_amount_spent_in(current_currency) %></td>
+  <td class='w-10 no-wrap cursor-pointer' data-action="click->row-link#openLink"><%= user.completed_orders_for_store(current_store).count %></td>
+  <td class='w-10 no-wrap cursor-pointer' data-action="click->row-link#openLink"><%= user.display_amount_spent_in(current_currency) %></td>
+  <td class='w-10 no-wrap cursor-pointer' data-action="click->row-link#openLink"><%= local_time(user.created_at) %></td>
 </tr>
