--- a/admin/app/views/spree/admin/users/index.html.erb
+++ b/admin/app/views/spree/admin/users/index.html.erb
@@ -3,8 +3,8 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= link_to spree.admin_users_path(q: params[:q].to_unsafe_hash, page: params[:page], per_page: params[:per_page], format: :csv), class: 'btn btn-light bg-transparent with-tip mr-2 d-none d-lg-inline-flex', title: 'Export Customers to a CSV file. To filter specific Customers use "Filters" or Customers/Subscribers tabs before clicking this button' do %>
-    <%= icon 'table-export', class: 'mr-2' %>
+  <%= link_to spree.admin_users_path(q: params[:q].to_unsafe_hash, page: params[:page], per_page: params[:per_page], format: :csv), class: 'btn btn-light bg-transparent with-tip d-none d-lg-inline-flex', title: 'Export Customers to a CSV file. To filter specific Customers use "Filters" or Customers/Subscribers tabs before clicking this button' do %>
+    <%= icon 'table-export' %>
     <%= Spree.t(:export) %>
   <% end if can?(:export, Spree::Export) %>
   
@@ -53,6 +53,7 @@
                 <th><%= Spree.t(:location) %></th>
                 <th><%= Spree.t('admin.num_orders') %></th>
                 <th><%= Spree.t('admin.amount_spent') %></th>
+                <th><%= sort_link @search, :created_at, Spree.t(:created_at) %></th>
               </tr>
             </thead>
             <tbody>
