Added breadcrumb navigation to admin dashboard
As we have a lot of nested resources this will improve the UX

--- a/admin/app/assets/stylesheets/spree/admin/components/_buttons.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_buttons.scss
@@ -62,27 +62,15 @@ button[disabled]        .show-when-enabled { display: none; }
   }
 }
 
-.btn-hover {
-  &:hover, &:focus {
-    text-decoration: none;
-    background-color: $gray-50;
-  }
-}
 .hover-light {
   &:hover, &:focus {
-    background-color: $gray-25;
+    background-color: $dropdown-link-hover-bg;
     text-decoration: none;
   }
 }
 .hover-gray {
   &:hover, &:focus {
     background-color: $gray-100;
-    text-decoration: none;
-  }
-}
-.hover-gray-50 {
-  &:hover, &:focus {
-    background-color: $gray-50;
     text-decoration: none;
   }
 }
