--- a/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
@@ -82,7 +82,7 @@
   }
   .dropdown-item.active {
     font-weight: 600 !important;
-    background-color: $gray-50 !important;
+    background-color: $dropdown-link-hover-bg !important;
   }
   .button_to {
     width: 100%;
