--- a/admin/app/assets/stylesheets/spree/admin/shared/_forms.scss
+++ b/admin/app/assets/stylesheets/spree/admin/shared/_forms.scss
@@ -34,7 +34,7 @@ label {
     @extend .shadow-none;
     @extend .text-muted;
     background-color: $gray-50 !important;
-    border: 1px solid $gray-100 !important;
+    border: 1px solid $border-color !important;
     cursor: not-allowed;
   }
 }
