--- a/admin/app/views/spree/admin/properties/edit.html.erb
+++ b/admin/app/views/spree/admin/properties/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :page_title do %>
   <%= page_header_back_button admin_properties_url %>
-  <%= @property.name %>
+  <%= @property.presentation %>
 <% end %>
 
 
