--- a/admin/app/views/spree/admin/shared/sidebar/_products_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_products_nav.html.erb
@@ -1,6 +1,6 @@
 <% products_active =  %w[products external_categories taxons taxonomies option_types option_values properties stock_items stock_transfers].include?(controller_name) || request.path.include?('products') %>
 <% if can?(:manage, Spree::Product) %>
-  <%= nav_item(Spree.t(:products), spree.admin_products_path, icon: 'box-seam', active: products_active) %>
+  <%= nav_item(Spree.t(:products), spree.admin_products_path, icon: 'package', active: products_active) %>
   <% if products_active %>
     <ul class="ml-4 pl-1 mb-2 nav-submenu mt-1">
       <% if can?(:manage, Spree::StockItem) || can?(:manage, Spree::StockTransfer) %>
