--- a/admin/app/views/spree/admin/promotions/_sidebar.html.erb
+++ b/admin/app/views/spree/admin/promotions/_sidebar.html.erb
@@ -49,6 +49,24 @@
 
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <span class="text-muted">
+            <%= Spree.t(:created_at) %>
+          </span>
+          <span>
+            <%= local_time(@promotion.created_at, format: :long) %>
+          </span>
+        </li>
+
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <span class="text-muted">
+            <%= Spree.t(:updated_at) %>
+          </span>
+          <span>
+            <%= local_time(@promotion.updated_at, format: :long) %>
+          </span>
+        </li>
+
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <span class="text-muted">
             <%= Spree.t(:kind) %>
           </span>
           <span class="badge badge-light">
