--- a/admin/app/views/spree/admin/shared/sidebar/_store_dropdown.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_store_dropdown.html.erb
@@ -1,46 +1,11 @@
-<% if available_stores.count > 1 %>
-  <div class="modal fade" id="switch-store-modal" tabindex="-1" role="dialog" aria-labelledby="switchStoreModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <%= modal_header(icon('switch-horizontal', class: 'mr-2') + Spree.t(:switch_store)) %>
-        <div class="modal-body">
-          <div class="list-group">
-            <% available_stores.each do |store| %>
-              <% if store.id != current_store.id %>
-                <%= link_to spree.admin_dashboard_url(host: store.url), class: 'list-group-item hover-light d-flex text-dark w-100 align-items-center text-primary' do %>
-                  <%= store_admin_icon(current_store, height: 32, width: 32) %>
-                  <span class="ml-3">
-                    <%= store.name %>
-                  </span>
-                <% end %>
-              <% else %>
-                <div class="list-group-item d-flex text-dark w-100 align-items-center cursor-disabled active">
-                  <%= store_admin_icon(current_store, height: 32, width: 32) %>
-                  <span class="ml-3">
-                    <%= store.name %>
-                  </span>
-
-                  <%= icon('check', class: 'ml-auto') %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-<% end %>
-
-<div class="store-dropdown sticky-top" id="store-menu" data-turbo-permanent>
+<div class="store-dropdown" id="store-menu" data-turbo-permanent>
   <div class="dropdown">
-    <button type="button" class="btn d-flex align-items-center justify-content-between text-left dropdown-toggle d-flex align-items-center gap-2"
+    <button type="button" class="btn store-dropdown-button dropdown-toggle"
             data-toggle="dropdown" aria-expanded="false">
       <%= store_admin_icon(current_store, height: 32, width: 32) %>
-      <span class="d-none d-lg-block">
-        <%= truncate(current_store.name, length: 10) %>
-      </span>
+      <%= truncate(current_store.name, length: 10) %>
     </button>
-    <div class="dropdown-menu">
+    <div class="dropdown-menu ml-2">
       <%= link_to current_store.formatted_url_or_custom_domain, class: 'dropdown-item', target: '_blank' do %>
         <%= icon 'eye' %>
         <%= Spree.t(:view_store) %>
@@ -52,45 +17,38 @@
 
       <% if available_stores.count > 1 %>
         <div class="dropdown-divider"></div>
-        <%= link_to "#", class: 'dropdown-item mb-0', data: { toggle: 'modal', target: '#switch-store-modal' } do %>
-          <%= icon 'switch-horizontal' %>
+        <h6 class="dropdown-header">
           <%= Spree.t(:switch_store) %>
-        <% end %>
+        </h6>
+        <div class="store-chooser">
+          <% available_stores.each do |store| %>
+            <% if store.id == current_store.id %>
+              <div class="store-chooser-item active">
+                <%= store_admin_icon(store, height: 32, width: 32) %>
+                <span class="d-flex flex-column mr-2">
+                  <%= store.name %>
+                  <small class="text-muted">
+                    <%= store.url_or_custom_domain %>
+                  </small>
+                </span>
+                <%= icon('check', class: 'ml-auto') %>
+              </div>
+            <% else %>
+              <%= link_to spree.admin_dashboard_url(host: store.url), class: 'store-chooser-item' do %>
+                <%= store_admin_icon(store, height: 32, width: 32) %>
+                <span class="d-flex flex-column">
+                  <%= store.name %>
+                  <small class="text-muted">
+                    <%= store.url_or_custom_domain %>
+                  </small>
+                </span>
+              <% end %>
+            <% end %>
+          <% end %>
+        </div>
       <% end %>
     </div>
   </div>
 
-  <div class="dropdown">
-    <button type="button" class="btn btn-sm btn-light shadow-xs" data-toggle="dropdown" aria-expanded="false">
-      <%= icon 'plus', class: 'mr-0' %>
-    </button>
-    <div class="dropdown-menu">
-      <%= link_to_with_icon 'shopping-bag-plus', Spree.t(:new_order), spree.admin_orders_path, class: "dropdown-item", data: { turbo_method: :post } if can?(:manage, Spree::Order)  %>
-
-      <%= link_to spree.new_admin_product_path, class: 'dropdown-item' do %>
-        <%= icon 'cube-plus' %>
-        <%= Spree.t(:new_product) %>
-      <% end if can?(:create, Spree::Product) %>
-      <%= link_to spree.new_admin_user_path, class: 'dropdown-item' do %>
-        <%= icon 'user-plus' %>
-        <%= Spree.t(:new_customer) %>
-      <% end if can?(:manage, Spree.user_class) %>
-
-      <%= link_to spree.new_admin_promotion_path, class: 'dropdown-item' do %>
-        <%= icon 'discount' %>
-        <%= Spree.t(:new_promotion) %>
-      <% end if can?(:create, Spree::Promotion) %>
-
-      <%= invite_vendor_button(class: 'dropdown-item') if defined?(invite_vendor_button) %>
-
-      <% if can?(:create, Spree::Store) %>
-        <div class="dropdown-divider"></div>
-
-        <span data-toggle="modal" data-target="#modal-lg">
-          <%= link_to_with_icon 'building-store', Spree.t(:new_store), spree.new_admin_store_path, class: 'dropdown-item', data: { turbo_frame: 'dialog_modal_lg' } %>
-        </span>
-      <% end %>
-    </div>
-  </div>
+  <%= render 'spree/admin/shared/new_item_dropdown' %>
 </div>
-
