--- a/admin/app/views/spree/admin/admin_users/_admin_user.html.erb
+++ b/admin/app/views/spree/admin/admin_users/_admin_user.html.erb
@@ -9,8 +9,8 @@
     <% end %>
   </td>
   <td class="w-30" data-action="click->row-link#openLink">
-    <% admin_user.spree_roles.each do |role| %>
-      <span class="badge badge-light"><%= role.name %></span>
+    <% admin_user.role_users.each do |role_user| %>
+      <span class="badge badge-light"><%= role_user.role.name %></span>
     <% end %>
   </td>
   <td class="w-20">
