--- a/admin/app/views/spree/admin/admin_users/show.html.erb
+++ b/admin/app/views/spree/admin/admin_users/show.html.erb
@@ -48,8 +48,8 @@
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <%= Spree.t(:roles) %>
               <span>
-                <% @admin_user.spree_roles.each do |role| %>
-                  <span class="badge badge-light"><%= role.name %></span>
+                <% @role_users.each do |role_user| %>
+                  <span class="badge badge-light"><%= role_user.role.name %></span>
                 <% end %>
               </span>
             </li>
