--- a/admin/app/views/spree/admin/variants/form/_media.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_media.html.erb
@@ -19,6 +19,7 @@
           asset_uploader_viewable_id_value: viewable&.id,
           asset_uploader_viewable_type_value: 'Spree::Variant',
           asset_uploader_allowed_file_types_value: allowed_file_types_for_upload,
+          asset_uploader_store_url_value: current_store.formatted_url_or_custom_domain,
           action: 'asset-uploader#open',
           media_form_target: 'addButton'
         }  do %>
