--- a/storefront/app/views/themes/default/spree/products/_add_to_wishlist.html.erb
+++ b/storefront/app/views/themes/default/spree/products/_add_to_wishlist.html.erb
@@ -6,6 +6,7 @@
     <div class="wished-item-<%= variant.id %> h-full"
       data-controller="wished-item"
       data-wished-item-variant-id-value="<%= variant.id %>"
+      data-wished-item-store-url-value="<%= current_store.formatted_url_or_custom_domain %>"
     >
       <%= button_tag type: 'submit',
           class: "#{css_classes} disabled:animate-pulse",
