CHG urls to rails helpers methods

--- a/storefront/app/views/themes/default/spree/products/_add_to_wishlist.html.erb
+++ b/storefront/app/views/themes/default/spree/products/_add_to_wishlist.html.erb
@@ -6,7 +6,8 @@
     <div class="wished-item-<%= variant.id %> h-full"
       data-controller="wished-item"
       data-wished-item-variant-id-value="<%= variant.id %>"
-      data-wished-item-store-url-value="<%= current_store.formatted_url_or_custom_domain %>"
+      data-wished-item-create-wishlist-path-value="<%= spree.account_wishlist_wished_items_path %>"
+      data-wished-item-destroy-wishlist-path-value="<%= spree.account_wishlist_wished_item_path(variant.id) %>"
     >
       <%= button_tag type: 'submit',
           class: "#{css_classes} disabled:animate-pulse",
