CHG url to rails methods on video embed

--- a/admin/app/views/spree/admin/shared/_head.html.erb
+++ b/admin/app/views/spree/admin/shared/_head.html.erb
@@ -52,3 +52,8 @@
 <%= render 'spree/shared/google_places_api_loader' %>
 
 <%= render_admin_partials(:head_partials) %>
+
+<script>
+  window.Spree = window.Spree || {}
+  Spree.adminPath = '<%= spree.admin_path %>'
+</script>
