Admin: Fixed theme preview dimensions on Storefront / Themes

--- a/admin/app/views/spree/admin/dashboard/_store_preview.html.erb
+++ b/admin/app/views/spree/admin/dashboard/_store_preview.html.erb
@@ -1,5 +1,5 @@
 <% if current_store.default_theme %>
-  <div class="card mb-4 bg-transparent">
+  <div class="card mb-4">
     <%= link_to spree.edit_admin_theme_path(current_store.default_theme), class: 'd-block border rounded mx-2 mt-2 mb-0 overflow-auto bg-light position-relative store-preview-link' do %>
       <div class="position-absolute w-100 h-100 align-items-center justify-content-center overlay-background store-preview-actions">
         <button class="btn btn-primary">
