--- a/admin/app/views/spree/admin/page_builder/_sidebar_block.html.erb
+++ b/admin/app/views/spree/admin/page_builder/_sidebar_block.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="d-flex align-items-center d-none">
         <% if block.section.can_sort_blocks? %>
-          <button class="btn btn-sm pr-0 handle hover-gray-200 h-100 mr-1 px-1 handle-block">
+          <button class="btn btn-sm pr-0 handle hover-gray-200 h-100 px-1 handle-block">
             <%= icon('grip-vertical', class: 'mr-0') %>
           </button>
         <% end %>
