--- a/admin/app/views/spree/admin/shared/_breadcrumbs.html.erb
+++ b/admin/app/views/spree/admin/shared/_breadcrumbs.html.erb
@@ -5,6 +5,7 @@
       <li>
         <%= active_link_to Spree.t(:settings), spree.edit_admin_store_path %>
       </li>
+      <%= icon('slash', class: 'text-muted font-size-sm') %>
     <% end %>
 
     <%= render_breadcrumbs tag: :li, separator: icon('slash', class: 'text-muted font-size-sm') %>
