--- a/admin/app/views/spree/admin/shared/sidebar/_integrations_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_integrations_nav.html.erb
@@ -1,5 +1,5 @@
 <% if can?(:manage, Spree::Integration) %>
   <li class="nav-item">
-    <%= nav_item(Spree.t(:integrations), spree.admin_integrations_path, icon: 'plug') %>
+    <%= nav_item(Spree.t(:integrations), spree.admin_integrations_path, icon: 'plug-connected') %>
   </li>
 <% end %>
