--- a/admin/app/views/active_storage/_upload_form.html.erb
+++ b/admin/app/views/active_storage/_upload_form.html.erb
@@ -22,7 +22,7 @@
           form.object.send(field_name),
           width: width,
           height: height,
-          class: 'img-fluid rounded-lg',
+          class: 'img-fluid rounded',
           data: { active_storage_upload_target: 'thumb' },
           loading: :lazy
         ) %>
