--- a/admin/app/views/spree/admin/page_builder/_sidebar_block.html.erb
+++ b/admin/app/views/spree/admin/page_builder/_sidebar_block.html.erb
@@ -7,15 +7,16 @@
                                      } do %>
     <div class="d-flex align-items-center justify-content-between sidebar-block-title p-1 rounded-sm">
       <div class="d-flex align-items-center flex-fill">
-        <%= icon "#{block.icon_name}", class: 'mr-2' if block.icon_name.present? %>
-        <%= link_to block.display_name, edit_admin_page_section_block_path(block.section, block),
-                    class: 'block-edit-link flex-fill text-dark',
-                    data: {
-                      turbo_frame: :page_sidebar,
-                      action: 'click->page-builder#makeOverlayActive',
-                      page_builder_editor_id_param: "block-#{block.id}"
-                    }
-        %>
+        <%= link_to(edit_admin_page_section_block_path(block.section, block),
+          class: 'block-edit-link flex-fill text-dark',
+          data: {
+            turbo_frame: :page_sidebar,
+            action: 'click->page-builder#makeOverlayActive',
+            page_builder_editor_id_param: "block-#{block.id}"
+          }) do %>
+          <%= icon "#{block.icon_name}", class: 'mr-2' if block.icon_name.present? %>
+          <%= block.display_name %>
+        <% end %>
       </div>
       <div class="d-flex align-items-center d-none">
         <% if block.section.can_sort_blocks? %>
