--- a/admin/app/views/spree/admin/gift_cards/_filters.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/_filters.html.erb
@@ -25,7 +25,7 @@
     <% end %>
 
     <div class="form-group">
-      <%= f.label :batch_prefix_eq, Spree.t(:prefix) %>
+      <%= f.label :batch_prefix_eq, Spree.t('admin.gift_card_batches.prefix') %>
       <%= f.text_field :batch_prefix_eq, class: "form-control", data: {filters_target: :input} %>
     </div>
 
