--- a/admin/app/views/spree/admin/gift_cards/_list.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/_list.html.erb
@@ -11,7 +11,7 @@
           <th><%= Spree.t(:expires_at) %></th>
 
           <% if params[:user_id].blank? %>
-            <th><%= Spree.t(:issued_to) %></th>
+            <th><%= Spree.t('admin.gift_cards.issued_to') %></th>
             <th></th>
           <% end %>
         </tr>
