--- a/admin/app/views/spree/admin/gift_cards/new.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/new.html.erb
@@ -5,7 +5,7 @@
     <%= page_header_back_button spree.admin_gift_cards_path %>
   <% end %>
 
-  <%= Spree.t(:new_gift_card) %>
+  <%= Spree.t('admin.gift_cards.new_gift_card') %>
 <% end %>
 
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @object } %>
