--- a/admin/app/views/spree/admin/gift_card_batches/new.html.erb
+++ b/admin/app/views/spree/admin/gift_card_batches/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :page_title do %>
   <%= page_header_back_button spree.admin_gift_cards_path %>
-  <%= Spree.t(:new_gift_card_batch) %>
+  <%= Spree.t('admin.gift_card_batches.new_gift_card_batch') %>
 <% end %>
 
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @object } %>
