--- a/admin/app/views/spree/admin/gift_cards/_table_filter_dropdown.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/_table_filter_dropdown.html.erb
@@ -5,7 +5,7 @@
   </button>
   <div class="dropdown-menu w-100" style="min-width: 200px">
 
-    <%= active_link_to Spree.t(:all_statuses), params.to_unsafe_h.deep_merge({page: nil, q: {status_eq: nil}}), class: 'dropdown-item', active: (params[:q] || {}).values_at(*%w[status_eq in_stock_items out_of_stock_items] ).all?(&:blank?) %>
+    <%= active_link_to Spree.t('admin.gift_cards.all_statuses'), params.to_unsafe_h.deep_merge({page: nil, q: {status_eq: nil}}), class: 'dropdown-item', active: (params[:q] || {}).values_at(*%w[status_eq in_stock_items out_of_stock_items] ).all?(&:blank?) %>
     
     <%= link_to Spree.t('admin.gift_cards.active'),
       params.to_unsafe_h.deep_merge({page: nil, q: {status_eq: :active}}),
