--- a/admin/app/views/spree/admin/themes/_theme_preview_image.html.erb
+++ b/admin/app/views/spree/admin/themes/_theme_preview_image.html.erb
@@ -11,5 +11,7 @@
   loading: :lazy
 ) %>
 <% else %>
-  <%= render 'spree/admin/shared/no_image', width: width, height: height %>
+  <div class="rounded bg-light text-muted d-flex align-items-center justify-content-center img-fluid" style="height: <%= height %>px">
+    <%= icon('camera-off', class: 'text-muted opacity-50') %>
+  </div>
 <% end %>
