--- a/admin/app/views/spree/admin/gift_cards/edit.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/edit.html.erb
@@ -11,7 +11,7 @@
   </span>
 <% end %>
 
-<% if @object.redeemed? || @object.redeemed_by_order? || @object.partialy_redeemed? %>
+<% if @object.redeemed? || @object.redeemed_by_order? || @object.partially_redeemed? %>
   <div class="card mb-4">
     <div class="card-header">
       <h5 class="card-title">
