--- a/admin/app/views/spree/admin/gift_cards/_table_filter_dropdown.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/_table_filter_dropdown.html.erb
@@ -9,15 +9,15 @@
     
     <%= link_to Spree.t('admin.gift_cards.active'),
       params.to_unsafe_h.deep_merge({page: nil, q: {status_eq: :active}}),
-      class: "dropdown-item #{'active' if params[:q][:status_eq] == 'active'}" %>
+      class: "dropdown-item #{'active' if params[:q] && params[:q][:status_eq] == 'active'}" %>
     
     <%= link_to params.to_unsafe_h.deep_merge({page: nil, q: {status_eq: :expired}}),
-      class: "dropdown-item #{'active' if params[:q][:status_eq] == 'expired'}" do %>
+      class: "dropdown-item #{'active' if params[:q] && params[:q][:status_eq] == 'expired'}" do %>
         <%= Spree.t('admin.gift_cards.expired') %>
     <% end %>
 
     <%= link_to params.to_unsafe_h.deep_merge({page: nil, q: {status_eq: :redeemed}}),
-      class: "dropdown-item #{'active' if params[:q][:status_eq] == 'redeemed'}" do %>
+      class: "dropdown-item #{'active' if params[:q] && params[:q][:status_eq] == 'redeemed'}" do %>
         <%= Spree.t('admin.gift_cards.redeemed') %>
     <% end %>
 
