--- a/admin/app/views/spree/admin/gift_cards/index.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/index.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 
   <% content_for :page_actions do %>
-    <%= link_to spree.admin_gift_cards_path(q: params[:q].to_unsafe_hash, per_page: Spree::GiftCardBatch::LIMIT, format: :csv), id: 'gift-card-batch-export-link', class: 'btn btn-light bg-transparent with-tip', title: 'Export gift cards to a CSV file' do %>
+    <%= link_to spree.admin_gift_cards_path(q: params[:q].to_unsafe_hash, per_page: params[:per_page], format: :csv), id: 'gift-card-batch-export-link', class: 'btn btn-light bg-transparent with-tip', title: 'Export gift cards to a CSV file' do %>
       <%= icon 'table-export', class: 'mr-2' %>
       Export codes
     <% end %>
