--- a/admin/app/views/spree/admin/shared/sidebar/_store_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_store_nav.html.erb
@@ -12,6 +12,7 @@
       <%= nav_item(Spree.t(:emails), spree.edit_admin_store_path(section: 'emails'), icon: 'send', active: params[:section] == 'emails') %>
       <%= nav_item(Spree.t(:policies), spree.edit_admin_store_path(section: 'policies'), icon: 'list-check', active: params[:section] == 'policies') %>
       <%= nav_item(Spree.t(:checkout), spree.edit_admin_store_path(section: 'checkout'), icon: 'shopping-cart', active: params[:section] == 'checkout') %>
+      <%= render_admin_partials(:store_settings_nav_partials) %>
     <% end %>
 
     <% if can?(:manage, Spree::CustomDomain) %>
@@ -61,7 +62,7 @@
       <%= nav_item(Spree.t(:developers), spree.admin_oauth_applications_path, icon: 'terminal', active: %w[oauth_applications webhooks_subscribers].include?(controller_name)) %>
     <% end %>
 
-    <%= render_admin_partials(:store_settings_nav_partials) %>
+    <%= render_admin_partials(:settings_nav_partials) %>
   </ul>
 <% else %>
   <ul class="nav flex-column">
