--- a/admin/app/views/spree/admin/stores/form/_basic.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_basic.html.erb
@@ -157,4 +157,4 @@
   </div>
 </div>
 
-<%= render_admin_partials(:store_form_partials, f: f) %>
+<%= render_admin_partials(:store_form_partials, f: f, store: @store) %>
