Added missing admin partial injection points (#12752)

--- a/admin/app/views/spree/admin/shared/sidebar/_storefront_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_storefront_nav.html.erb
@@ -17,6 +17,8 @@
       <% if can?(:manage, current_store) %>
         <%= nav_item(Spree.t(:settings), spree.edit_admin_storefront_path) %>
       <% end %>
+
+      <%= render_admin_partials(:storefront_nav_partials) %>
     </ul>
   <% end %>
 <% end %>
