--- a/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
@@ -45,6 +45,7 @@
     background: transparent;
     padding-top: 0.4rem;
     padding-bottom: 0.4rem;
+    margin-bottom: 0.15rem;
 
     color: $gray-700;
 
