--- a/admin/app/views/spree/admin/shipping_methods/form/_zones.html.erb
+++ b/admin/app/views/spree/admin/shipping_methods/form/_zones.html.erb
@@ -20,7 +20,7 @@
           <% end %>
         </div>
       <% end %>
-      <%= f.error_message_on :zone_id %>
+      <%= f.error_message_on :zone_ids %>
     </div>
   </div>
 </div>
