Improve admin cards UX

--- a/admin/app/assets/stylesheets/spree/admin/components/_cards.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_cards.scss
@@ -42,14 +42,11 @@
 .card-header, .card-footer {
   background-color: transparent;
 }
-.card-header, .card-footer, .card-body {
-  border-top: 0 none;
-}
 .card-header {
   display: flex;
   align-items: center;
   height: 50px;
-  border-bottom-color: $gray-50;
+  border-bottom: 1px solid $gray-50;
 
   .card-title {
     margin-bottom: 0;
@@ -124,8 +121,5 @@
   }
   .card-body {
     border-top: 1px solid $gray-50;
-  }
-  .card-header {
-    border: 0 none;
   }
 }
