--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -1,8 +1,8 @@
 // https://github.com/twbs/bootstrap/blob/v4.6.2/scss/_variables.scss
 
-$gray-25: #F9F9F9;
+$gray-25: #FAFAFA;
 $gray-50: #F3F3F3;
-$gray-100: #E7E5E4 !default;
+$gray-100: #EAEAEA !default;
 $gray-200: #D5D5D5 !default;
 $gray-300: #B3B3B3 !default;
 $gray-400: #999999 !default;
